[gd_scene load_steps=2 format=3 uid="uid://cuuon185488y3"]

[ext_resource type="Script" uid="uid://b0dn4s83wegma" path="res://Common/Managers/InventoryManager/inventory_manager.gd" id="1_v5qlk"]

[node name="InventoryManager" type="Node3D"]
script = ExtResource("1_v5qlk")

[node name="ItemSwapToTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="ItemSwapFromTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="timeout" from="ItemSwapToTimer" to="." method="_on_item_swap_to_timer_timeout"]
[connection signal="timeout" from="ItemSwapFromTimer" to="." method="_on_item_swap_from_timer_timeout"]
